--- a/yoFireAuthStore/client/app/shoppingCart/cart/cart.html
+++ b/yoFireAuthStore/client/app/shoppingCart/cart/cart.html
@@ -1,8 +1,10 @@
 <div class="col-sm-offset-1 col-sm-10">
     <p class="text-info">
 
-    <h4>This is your shopping cart. Here you can edit the items,
-        go back to the store, clear the cart, or check out.</h4><br/>
+    <h4>
+        This is your shopping cart. Here you can edit the items,
+        go back to the store, clear the cart, or check out.
+    </h4><br/>
     </p>
 
     <div class="container-fluid">
@@ -17,9 +19,7 @@
                         <td><b>Item</b></td>
                         <td class="tdCenter"><b>Quantity</b></td>
                         <td class="tdRight"><b>Price</b></td>
-                        <td/>
                     </tr>
-
                     <!-- empty cart message -->
                     <tr ng-hide="cart.getTotalCount() > 0">
                         <td class="tdCenter" colspan="4">
@@ -51,7 +51,7 @@
                         </td>
                         <td class="tdRight">{{item.price * item.quantity | currency}}</td>
                         <td class="tdCenter" title="remove from cart">
-                            <a href="" ng-click="cart.addItem(item.sku, item.name, item.price, -10000000)">
+                            <a ui-sref="" ng-click="cart.addItem(item.sku, item.name, item.price, -10000000)">
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                             </a>
                         </td>
@@ -70,11 +70,11 @@
             <!-- buttons -->
             <div class="col-md-4 col-sm-12">
                 <p class="text-info">
-                    <button
-                        class="btn btn-block"
-                        onclick="window.location.href='/store'">
-                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> back to store
-                    </button>
+                    <a ui-sref="store">
+                        <button class="btn btn-block">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> back to store
+                        </button>
+                    </a>
                     <button
                         class="btn btn-block btn-danger"
                         ng-click="cart.clearItems()"
