Fix sref reference in cart.html.

--- a/yoFireAuthStore/client/app/shoppingCart/cart/cart.html
+++ b/yoFireAuthStore/client/app/shoppingCart/cart/cart.html
@@ -51,7 +51,7 @@
                         </td>
                         <td class="tdRight">{{item.price * item.quantity | currency}}</td>
                         <td class="tdCenter" title="remove from cart">
-                            <a ui-sref="" ng-click="cart.addItem(item.sku, item.name, item.price, -10000000)">
+                            <a href="" ng-click="cart.addItem(item.sku, item.name, item.price, -10000000)">
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                             </a>
                         </td>
